Arreglo de rutas - Login a Admin

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,4 @@
-<div class="wrapper">
-  <!-- Navbar new commit sdas -->
-  
-  <!-- /.navbar -->
 
-  <!-- Main Sidebar Container -->
-  <app-header></app-header>
-  <app-sidebar></app-sidebar>
-
-  <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
+<router-outlet>
     
-  </div>
-</div>
+</router-outlet>
