--- a/src/app/admin/shared/sidebar/sidebar.component.html
+++ b/src/app/admin/shared/sidebar/sidebar.component.html
@@ -40,15 +40,15 @@
             <a href="#" class="nav-link active">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
-                Productos
+                Alumnos
                 <i class="right fas fa-angle-left"></i>
               </p>
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a class="nav-link">
+                <a class="nav-link" >
                   <i class="far fa-circle nav-icon"></i>
-                  <p>CRUD</p>
+                  <p>Registrar</p>
                 </a>
               </li>
               
