--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -7,17 +7,17 @@
                 <h5 class="text-center">INICIAR SESIÓN</h5>
                 <form class="form-signin">
                   <div class="form-label-group">
-                    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" formControlName="login">
                     <label for="inputEmail">Email address</label>
                   </div>
     
                   <div class="form-label-group">
-                    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                    <input type="password" id="inputPassword" class="form-control" placeholder="Password" formControlName="password">
                     <label for="inputPassword">Password</label>
                   </div>
     
                   
-                  <button class="btn btn-lg btn-primary btn-block text-uppercase"(click)="prueba()" type="submit">Sign in</button>
+                  <button class="btn btn-lg btn-primary btn-block text-uppercase" type="button" (click)="prueba()">Sign in</button>
                  
                 </form>
               </div>
