--- a/src/app/admin/alumno/alumno.component.html
+++ b/src/app/admin/alumno/alumno.component.html
@@ -1,1 +1,437 @@
-<p>alumno works!</p>
+<ng-template #contenido let-modal>
+  <div class="modal-header">
+    <h4>Ficha de Alumno</h4>
+  </div>
+  <div class="modal-body">
+    <form (ngSubmit)="saveCurso()" [formGroup]="formAlumno" autocomplete="off">
+      <div class="row">
+        <div class="card">
+          <div class="card-header">Datos Personales</div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Cod. Educando</label>
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    id="codigo"
+                    name="codigo"
+                    formControlName="codigoEducando"
+                  />
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Código Modular</label>
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    id="nombre"
+                    name="nombre"
+                    formControlName="nombre"
+                  />
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">DNI</label>
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    id="nombre"
+                    name="nombre"
+                    formControlName="nombre"
+                  />
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Nro Matricula</label>
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    id="nombre"
+                    name="nombre"
+                    formControlName="nombre"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Apellido Paterno</label>
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    id="codigo"
+                    name="codigo"
+                    formControlName="codigoEducando"
+                  />
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Apellido Materno</label>
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    id="nombre"
+                    name="nombre"
+                    formControlName="nombre"
+                  />
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Primer Nombre</label>
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    id="nombre"
+                    name="nombre"
+                    formControlName="nombre"
+                  />
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Otros Nombres</label>
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    id="nombre"
+                    name="nombre"
+                    formControlName="nombre"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Sexo</label>
+                  <select name="" class="form-control form-control-sm" id="">
+                    <option value="F">Femenino</option>
+                    <option value="M">Masculino</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Fecha de Nac.</label>
+                  <input
+                    type="date"
+                    class="form-control form-control-sm"
+                    id="nombre"
+                    name="nombre"
+                    formControlName="nombre"
+                  />
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">País</label>
+                  <select name="" class="form-control form-control-sm" id="">
+                    <option value="01">Perú</option>
+                    <option value="02">Chile</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Escala</label>
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    id="nombre"
+                    name="nombre"
+                    formControlName="nombre"
+                  />
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Año Ingreso</label>
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    id="nombre"
+                    name="nombre"
+                    formControlName="nombre"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Departamento</label>
+                  <select name="" class="form-control form-control-sm" id="">
+                    <option value="F">La Libertad</option>
+                    <option value="M">Lima</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Provincia</label>
+                  <select name="" class="form-control form-control-sm" id="">
+                    <option value="F">Trujillo</option>
+                    <option value="M">Virú</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Distrito</label>
+                  <select name="" class="form-control form-control-sm" id="">
+                    <option value="F">Trujillo</option>
+                    <option value="M">Porvenir</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Lengua Materna</label>
+                  <select name="" class="form-control form-control-sm" id="">
+                    <option value="F">La Libertad</option>
+                    <option value="M">Lima</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Estado Civil</label>
+                  <select name="" class="form-control form-control-sm" id="">
+                    <option value="F">Trujillo</option>
+                    <option value="M">Virú</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Religión</label>
+                  <select name="" class="form-control form-control-sm" id="">
+                    <option value="F">Trujillo</option>
+                    <option value="M">Porvenir</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Fecha de Bautizo</label>
+                  <input
+                    type="date"
+                    class="form-control form-control-sm"
+                    id="nombre"
+                    name="nombre"
+                    formControlName="nombre"
+                  />
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Parroquia de Bautizo</label>
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    id="nombre"
+                    name="nombre"
+                    formControlName="nombre"
+                  />
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Colegio Procedencia</label>
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    id="nombre"
+                    name="nombre"
+                    formControlName="nombre"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="card" style="width: 100%">
+          <div class="card-header">Datos de Domicilio</div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-8">
+                <div class="form-group">
+                  <label for="">Dirección</label>
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    id="codigo"
+                    name="codigo"
+                    formControlName="codigoEducando"
+                  />
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="form-group">
+                  <label for="">Telefono</label>
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    id="codigo"
+                    name="codigo"
+                    formControlName="codigoEducando"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                  <div class="form-group">
+                    <label for="">Departamento</label>
+                    <select name="" class="form-control form-control-sm" id="">
+                      <option value="F">La Libertad</option>
+                      <option value="M">Lima</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-group">
+                    <label for="">Provincia</label>
+                    <select name="" class="form-control form-control-sm" id="">
+                      <option value="F">Trujillo</option>
+                      <option value="M">Virú</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-group">
+                    <label for="">Distrito</label>
+                    <select name="" class="form-control form-control-sm" id="">
+                      <option value="F">Trujillo</option>
+                      <option value="M">Porvenir</option>
+                    </select>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="card" style="width: 100%;">
+          <div class="card-header">
+            Datos de Servicios y Otros del Domicilio
+          </div>
+          <div class="card-body">
+            <div class="row">
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Medio de Transporte</label>
+                  <select name="" class="form-control form-control-sm" id="">
+                    <option value="F">La Libertad</option>
+                    <option value="M">Lima</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Demora en llegar</label>
+                  <input
+                    type="text"
+                    class="form-control form-control-sm"
+                    id="nombre"
+                    name="nombre"
+                    formControlName="nombre"
+                  />
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Material</label>
+                  <select name="" class="form-control form-control-sm" id="">
+                    <option value="F">Trujillo</option>
+                    <option value="M">Porvenir</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Energia Electrica</label>
+                  <select name="" class="form-control form-control-sm" id="">
+                    <option value="F">La Libertad</option>
+                    <option value="M">Lima</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Agua potable</label>
+                  <select name="" class="form-control form-control-sm" id="">
+                    <option value="F">Trujillo</option>
+                    <option value="M">Virú</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group">
+                  <label for="">Desagüe</label>
+                  <select name="" class="form-control form-control-sm" id="">
+                    <option value="F">Trujillo</option>
+                    <option value="M">Porvenir</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="button" class="btn btn-secondary" (click)="cerrarModal(contenido)">Cerrar</button>
+      </div>
+    </form>
+  </div>
+</ng-template>
+
+<div class="card">
+  <div class="card-header">LISTA DE CURSOS</div>
+  <div class="card-body">
+    <div class="row mb-1">
+      <div class="col d-flex">
+        <button
+          type="button"
+          class="btn btn-primary btn-sm ml-auto"
+          (click)="opensave(contenido)"
+        >
+          <i class="fas fa-plus-square"></i>
+        </button>
+        <button
+          type="button"
+          class="btn btn-warning btn-sm"
+          (click)="openedit(contenido)"
+        >
+          <i class="fas fa-edit"></i>
+        </button>
+        <button
+          type="button"
+          class="btn btn-danger btn-sm"
+          (click)="eliminar()"
+        >
+          <i class="fas fa-trash"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
