--- a/src/app/admin/curso/curso.component.html
+++ b/src/app/admin/curso/curso.component.html
@@ -3,7 +3,7 @@
     <h4>Descripción del producto</h4>
   </div>
   <div class="modal-body">
-    <form  (ngSubmit)="saveCurso()">
+    <form  (ngSubmit)="saveCurso()" [formGroup]="formCurso" autocomplete="off">
       <div class="row">
         <div class="col-2">
           <div class="form-group">
@@ -14,9 +14,11 @@
               class="form-control"
               id="codigo"
               name="codigo"
-             
+              formControlName="codigo"
             />
-            
+            <span class="form-text text-danger" *ngIf="campoEsValido('codigo')">
+              3 car. mín.
+            </span>
           </div>
         </div>
         <div class="col">
@@ -28,9 +30,12 @@
               class="form-control"
               id="nombre"
               name="nombre"
+              formControlName="nombre"
               
             />
-            
+            <span class="form-text text-danger" *ngIf="campoEsValido('nombre')">
+              Nombre requerido
+            </span>
           </div>
         </div>
       </div>
