--- a/src/app/admin/shared/sidebar/sidebar.component.html
+++ b/src/app/admin/shared/sidebar/sidebar.component.html
@@ -45,7 +45,7 @@
               </p>
             </a>
             <ul class="nav nav-treeview">
-              <li class="nav-item">
+              <li class="nav-item"[routerLink]="['alumno']">
                 <a class="nav-link" >
                   <i class="far fa-circle nav-icon"></i>
                   <p>Registrar</p>
@@ -65,6 +65,24 @@
             <ul class="nav nav-treeview">
               <li class="nav-item">
                 <a class="nav-link"[routerLink]="['curso']">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Registrar</p>
+                </a>
+              </li>
+              
+            </ul>
+          </li>
+          <li class="nav-item has-treeview">
+            <a href="#" class="nav-link active">
+              <i class="nav-icon fas fa-tachometer-alt"></i>
+              <p>
+                Personal
+                <i class="right fas fa-angle-left"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a class="nav-link"[routerLink]="['personal']">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Registrar</p>
                 </a>
