--- a/src/app/admin/alumno/alumno.component.html
+++ b/src/app/admin/alumno/alumno.component.html
@@ -406,7 +406,7 @@
 </ng-template>
 
 <div class="card">
-  <div class="card-header">LISTA DE CURSOS</div>
+  <div class="card-header">LISTA DE ALUMNOS</div>
   <div class="card-body">
     <div class="row mb-1">
       <div class="col d-flex">
@@ -433,5 +433,19 @@
         </button>
       </div>
     </div>
+    <div id="myGrid" class="ag-theme-alpine" style="width: 100%; height: 100%">
+      <ag-grid-angular
+        style="width: 100%px; height: 500px"
+        class="ag-theme-alpine"
+        [rowData]="rowData | async"
+        [columnDefs]="columnDefs"
+        [defaultColDef]="defaultColDef"
+        rowSelection="single"
+        (firstDataRendered)="onFirstDataRendered($event)"
+        (gridReady)="OnGridReady($event)"
+      >
+      </ag-grid-angular>
+    </div>
   </div>
 </div>
+
