--- a/src/app/admin/personal/personal.component.html
+++ b/src/app/admin/personal/personal.component.html
@@ -3,7 +3,7 @@
       <h4>{{accion}}</h4>
     </div>
     <div class="modal-body">
-      <form   [formGroup]="formPersonal" autocomplete="off">
+      <form   [formGroup]="formPersonal" autocomplete="off" (ngSubmit)="Guardar()">
         <div class="row">
           <div class="col-2">
             <div class="form-group">
@@ -12,9 +12,10 @@
                 
                 type="text"
                 class="form-control form-control-sm"
-                id="codigo"
-                name="codigo"
-                formControlName="codigoEducando"
+                id="per_nombres"
+                name="per_nombres"
+                formControlName="codPersonal"
+                [(ngModel)]="personal.per_nombres"
               />
              
             </div>
@@ -26,10 +27,10 @@
                 
                 type="text"
                 class="form-control form-control-sm"
-                id="nombre"
-                name="nombre"
-                formControlName="nombre"
-                
+                id="per_apellidos"
+                name="per_apellidos"
+                formControlName="nombrePersonal"
+                [(ngModel)]="personal.per_apellidos"
               />
               
             </div>
@@ -43,9 +44,10 @@
                 
                 type="text"
                 class="form-control form-control-sm"
-                id="codigo"
-                name="codigo"
-                formControlName="codigoEducando"
+                id="per_dni"
+                name="per_dni"
+                formControlName="dniPersonal"
+                [(ngModel)]="personal.per_dni"
               />
              
             </div>
@@ -57,10 +59,10 @@
                 
                 type="text"
                 class="form-control form-control-sm"
-                id="nombre"
-                name="nombre"
-                formControlName="nombre"
-                
+                id="per_direccion"
+                name="per_direccion"
+                formControlName="direccionPersonal"
+                [(ngModel)]="personal.per_direccion"
               />
               
             </div>
@@ -70,9 +72,9 @@
           <div class="col-2">
             <div class="form-group">
               <label for="">Estado civil</label>
-              <select name="" id="" class="form-control form-control-sm">
-                <option value="">CASADO</option>
-                <option value="">SOLTERO</option>
+              <select name="per_estadocivil" id="per_estadocivil" class="form-control form-control-sm" [(ngModel)]="personal.per_estadocivil"  formControlName="sexoPersonal">
+                <option value="C">CASADO</option>
+                <option value="S">SOLTERO</option>
               </select>
              
             </div>
@@ -84,10 +86,10 @@
                 
                 type="text"
                 class="form-control form-control-sm"
-                id="nombre"
-                name="nombre"
-                formControlName="nombre"
-                
+                id="per_telefono"
+                name="per_telefono"
+                formControlName="telefonoPersonal"
+                [(ngModel)]="personal.per_telefono"
               />
               
             </div>
@@ -99,10 +101,10 @@
                 
                 type="text"
                 class="form-control form-control-sm"
-                id="nombre"
-                name="nombre"
-                formControlName="nombre"
-                
+                id="per_segurosocial"
+                name="per_segurosocial"
+                formControlName="seguroPersonal"
+                [(ngModel)]="personal.per_segurosocial"
               />
               
             </div>
@@ -112,9 +114,9 @@
           <div class="col-7">
             <div class="form-group">
               <label for="">Departamento</label>
-              <select name="" id="" class="form-control form-control-sm">
-                <option value="">LA LIBERTAD</option>
-                <option value="">LIMA</option>
+              <select name="dep_cod" id="dep_cod" class="form-control form-control-sm" [(ngModel)]="personal.dep_cod" formControlName="depPersonal">
+                <option [value]="dpto.dep_cod" *ngFor="let dpto of departamentos">{{dpto.dep_descripcion}}</option>
+                
               </select>
              
             </div>
@@ -126,10 +128,10 @@
                 
                 type="date"
                 class="form-control form-control-sm"
-                id="nombre"
-                name="nombre"
-                formControlName="nombre"
-                
+                id="per_ingreso"
+                name="per_ingreso"
+                formControlName="fechaPersonal"
+                [(ngModel)]="personal.per_ingreso"
               />
               
             </div>
@@ -147,7 +149,7 @@
   </ng-template>
   
   <div class="card">
-    <div class="card-header">LISTA DE CURSOS</div>
+    <div class="card-header">PERSONAL REGISTRADO</div>
     <div class="card-body">
       <div class="row mb-1">
         <div class="col d-flex">
@@ -161,7 +163,7 @@
           <button
             type="button"
             class="btn btn-warning btn-sm"
-            
+            (click)="openEdit(modalPersonal)"
           >
             <i class="fas fa-edit"></i>
           </button>
@@ -174,7 +176,18 @@
           </button>
         </div>
       </div>
-      
+      <div id="myGrid" class="ag-theme-alpine" style="width: 100%; height: 100%">
+        <ag-grid-angular
+          style="width: 100%px; height: 500px"
+          class="ag-theme-alpine"
+          [rowData]="rowData"
+          [columnDefs]="columnDefs"
+          rowSelection='single'
+          (gridReady)="OnGridReady($event)"
+          
+        >
+        </ag-grid-angular>
+      </div>
     </div>
   </div>
   
