--- a/src/app/admin/personal/personal.component.html
+++ b/src/app/admin/personal/personal.component.html
@@ -5,9 +5,9 @@
     <div class="modal-body">
       <form   [formGroup]="formPersonal" autocomplete="off" (ngSubmit)="Guardar()">
         <div class="row">
-          <div class="col-2">
+          <div class="col-4">
             <div class="form-group">
-              <label for="">Codigo</label>
+              <label for="">Nombre</label>
               <input
                 
                 type="text"
@@ -22,7 +22,7 @@
           </div>
           <div class="col">
             <div class="form-group">
-              <label for="">Apellidos y Nombres</label>
+              <label for="">Apellidos</label>
               <input
                 
                 type="text"
@@ -39,7 +39,7 @@
         <div class="row">
           <div class="col-2">
             <div class="form-group">
-              <label for="">DNI</label>
+              <label for="">DNI/COD</label>
               <input
                 
                 type="text"
@@ -170,7 +170,7 @@
           <button
             type="button"
             class="btn btn-danger btn-sm"
-            
+            (click)="eliminar()"
           >
             <i class="fas fa-trash"></i>
           </button>
