--- a/src/app/admin/shared/sidebar/sidebar.component.html
+++ b/src/app/admin/shared/sidebar/sidebar.component.html
@@ -45,13 +45,18 @@
               </p>
             </a>
             <ul class="nav nav-treeview">
-              <li class="nav-item"[routerLink]="['alumno']">
-                <a class="nav-link" >
+              <li class="nav-item">
+                <a class="nav-link" [routerLink]="['alumno']" >
                   <i class="far fa-circle nav-icon"></i>
                   <p>Registrar</p>
                 </a>
               </li>
-              
+              <li class="nav-item">
+                <a class="nav-link"  [routerLink]="['matricula']">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Matriculas</p>
+                </a>
+              </li>
             </ul>
           </li>
           <li class="nav-item has-treeview">
