--- a/src/app/admin/home/home.component.html
+++ b/src/app/admin/home/home.component.html
@@ -1,17 +1,1 @@
-<body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
-  <div class="wrapper">
-    <!-- Navbar new commit sdas -->
-    
-    <!-- /.navbar -->
-  
-    <!-- Main Sidebar Container -->
-    <app-header></app-header>
-    <app-sidebar></app-sidebar>
-  
-    <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
-
-</body>
+<h3>Home Works</h3>
