--- a/src/app/admin/matricula/matricula.component.html
+++ b/src/app/admin/matricula/matricula.component.html
@@ -39,17 +39,27 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-6">
+            <div class="col">
                 <label for="nivel" class="for-label">Nivel</label>
                 <select class="form-control form-control" name="nivel" id="nivel">
                     <option value="">algodon</option>
                 </select>
             </div>
+            <div class="col">
+              <label for="nivel" class="for-label">Grado</label>
+              <select class="form-control form-control" name="nivel" id="nivel">
+                  <option value="">algodon</option>
+              </select>
+            </div>
+            <div class="col">
+              <label for="nivel" class="for-label">Sección</label>
+              <select class="form-control form-control" name="nivel" id="nivel">
+                  <option value="">algodon</option>
+              </select>
+            </div>
             <div class="col-6">
                 <label for="año" class="for-label">Año</label>
-                <select class="form-control form-control" name="año" id="año" >
-                    <option value="">algodon</option>
-                </select>
+                <input type="text" class="form-control" id="nombres" name="nombres">
             </div>
         </div>
     </div>
