--- a/src/app/admin/notas-gen/notas-gen.component.html
+++ b/src/app/admin/notas-gen/notas-gen.component.html
@@ -1,4 +1,8 @@
 <h1>Listado de cursos</h1>
 <mat-divider></mat-divider>
 <br>
-<mat-card></mat-card>
+<mat-card>
+    <div class="row">
+        <input type="text" [(ngModel)]="curso.cur_descripcion">
+    </div>
+</mat-card>
