--- a/src/app/admin/shared/header/header.component.html
+++ b/src/app/admin/shared/header/header.component.html
@@ -23,10 +23,13 @@
         </div>
       </div>
     </form>
-
+    
     <!-- Right navbar links -->
     <ul class="navbar-nav ml-auto">
       <!-- Messages Dropdown Menu -->
+      <li>
+        <a class="nav-link">Año escolar {{dataService.anio}}</a>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link" data-toggle="dropdown" href="#">
           <i class="far fa-comments"></i>
